# otus-c-202205

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md
HW1-rarjpeg/: CMakeLists.txt  Readme.md  init.sh  main.c  pkzip.h
HW1-rarjpeg/cmake/: CodeFormat.cmake  CodeStaticAnalysis.cmake
HW10-crc32/: CMakeLists.txt
HW10-crc32/data/: .gitignore
HW10-crc32/src/: crc32.c  crc32.h  main.c
HW11-threads/: CMakeLists.txt  note.md
HW11-threads/src/: hashtable.c  hashtable.h  main-t.c  main.c  main_0.c  main_1.c  main_2.c  main_21.c  main_3.c  powtable.h
HW11-threads/test/: timetest.sh
HW12-netsockets/: CMakeLists.txt
HW12-netsockets/cmake/: gengetopt.cmake
HW12-netsockets/docker/: .bashrc  Dockerfile  dinit.sh  docker-compose.yaml
HW12-netsockets/src/: .gitignore  CMakeLists.txt  cmdline.ggo  main.c
HW13-HTTP/: note.md
HW13-HTTP/test-epoll/: CMakeLists.txt  main.c
HW2-codings/: CMakeLists.txt  Readme.md  main.c  tables.h
HW3-hash/: CMakeLists.txt  Readme.md
HW3-hash/cmake/: FindCppCheck.cmake
HW3-hash/src/: create_powtable.py  hashtable.c  hashtable.h  main.c  powtable.h  word_counter.c  word_counter.h
HW3-hash/test/: voyna-i-mir.txt
HW4-libcurl/: CMakeLists.txt  Readme.md  note.md
HW4-libcurl/cmake/: CodeAnalysis.cmake
HW4-libcurl/src/: getter.c  getter.h  main.c  parser.c  parser.h
HW5-gstreamer/: CMakeLists.txt  Readme.md  note.md
HW5-gstreamer/my_audio_src/: gstmyaudiosrc.c  gstmyaudiosrc.h
HW5-gstreamer/my_base_src/: CMakeLists.txt  gstmybasesrc.c  gstmybasesrc.h
HW7-asm/: CMakeLists.txt  main.c
HW7-asm/exercise/: asm-prog  main.asm
HW8-tools/: 0001-HW8-Fixed-leaks-in-hash-map.patch  0002-HW8-Fixed-leaks-in-clib_package_new_from_slug_with_p.patch
HW8-tools/clib/src/common/: clib-package.c
HW8-tools/example-cmake/: CMakeLists.txt  lib.c  lib.h  main.c
HW8-tools/example-debug/: Makefile  fact.c  prog.c
HW9-unixsocket/: .clang-format  CMakeLists.txt  Readme.md  fsized.conf.yaml  note.md
HW9-unixsocket/cmake/: FindClangFormat.cmake  FindCppCheck.cmake
HW9-unixsocket/docker/: .env  Dockerfile  entrypoint.sh
HW9-unixsocket/src/: CMakeLists.txt  cmdline.ggo  config.c  config.h  file_info.c  file_info.h  main.c  version.h.in
